--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -57,7 +57,7 @@ const schemaData = schema || defaultSchema;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="public/logo.svg" />
-    <!-- <link rel="icon" href="/favicon.ico" /> -->
+    <link rel="icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
 
     <!-- SEO -->
